# fallow

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  OPEN_SOURCE_CHECKLIST.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  go.yml  release.yml
deploy/: .gitignore  OFFLINE.md  README.md  agent.example.toml  bootstrap.ps1  bootstrap.sh  bundle.ps1  bundle.sh  coordinator.example.toml  fetch-llama.sh  filter_bundle_requirements.py
deploy/macos/: com.fallow.agent.plist  install.sh  manifest.sha256.example  render_test.sh  uninstall.sh  verify-sha256.sh
deploy/windows/: README.md  fallow-agent-task.xml  fetch-llama.ps1  install.ps1  llama-manifest.psd1  uninstall.ps1
deploy/windows/lib/: backend.ps1
docs/: admin-api.md  ai-act-scoping.md  api-stability.md  architecture.md  compatibility.md  development.md  experiment.md  quickstart.md  rag.md  releasing.md  school-pilot.md
docs/adr/: 000-architecture-baseline.md  001-idle-detection.md  002-preemption.md  003-process-supervisor.md  004-model-cache.md  005-queue-store.md  006-registry-auth.md  007-model-serving.md  008-spike-plan.md  009-heartbeat-client.md  010-batch-workers.md  011-scheduler-v1.md  012-gateway.md  013-cli-admin-api.md  014-coordinator-app.md  015-agent-runtime.md  016-integration-suite.md  017-deploy.md  018-bench-hooks.md  019-bench-workload.md  020-bench-churn.md  021-bench-analysis.md  022-scheduler-v2.md  023-test-imports.md  024-unit-lifecycle-log.md  025-result-payloads.md  026-experiment-orchestration.md  026-interactive-admission.md  027-gated-benchmark-fleet.md  027-rag-vector-store.md  027-scheduler-reliability.md  028-gateway-session-affinity.md  028-rag-ingestion.md  029-interactive-admission.md  030-api-key-quotas.md  030-rag-vector-store.md  031-slot-aware-inflight-routing.md  032-rag-vector-store.md  033-rag-ingestion.md  034-rag-query-route.md  (+38 more)
docs/paper/: README.md
docs/paper/results/rep-01/: report.md
docs/paper/results/rep-02/: report.md
docs/paper/results/rep-03/: report.md
docs/pilot/: admin-runbook.md  data-policy-signoff.md  it-checklist.md
docs/research/: moe-fabric.md
examples/: README.md  model_manifest.py
experiments/: main.yaml
experiments/arms/: churn_v2.toml.in  dedicated.toml.in  round_robin.toml.in
experiments/corpora/: handbook_embed.jsonl
experiments/fleet/: README.md
experiments/fleet/scripts/: cleanup.sh  dry-run.sh  lib.sh  render.sh  setup.sh  stop.sh  validate.sh
experiments/fleet/templates/: agent.toml.tmpl  cloud-init.yaml.tmpl  fallow-agent.service.tmpl
experiments/fleet/tests/: test_fleet_scaffold.sh
experiments/moe/: README.md  conftest.py  harness.py  metrics.py  runners.py
experiments/moe/tests/: test_harness.py
experiments/prompts/: coding.txt  rag.txt
experiments/spikes/: README.md  RESULTS.md  spike_cuda_suspend_cycles.py  spike_load_times.py  spike_proxy_overhead.py  spike_suspend_latency.py
go-agent/: .goreleaser.yaml  README.md  go.mod  go.sum
go-agent/cmd/agentctl/: main.go
go-agent/config/: config.go  config_test.go
go-agent/coordinator/: client.go  client_test.go  errors.go  identity.go  identity_test.go  replace_unix.go  replace_windows.go
go-agent/daemon/: events.go  events_test.go  heartbeat.go  heartbeat_test.go
go-agent/heartbeat/: README.md  client.go  client_test.go  config.go  constants.go  errors.go
go-agent/idle/: README.md  detector_darwin.go  detector_darwin_nocgo.go  detector_darwin_stub.go  detector_darwin_test.go  detector_linux.go  detector_linux_test.go  detector_other.go  detector_windows.go  detector_windows_test.go  fake.go  idle.go  idle_test.go  ticks.go  ticks_notwindows.go
go-agent/interop/: interop_test.go  syncbuffer.go
go-agent/modelcache/: README.md  config.go  download.go  download_test.go  errors.go  helpers_test.go  paths.go  present_test.go  store.go  verify_test.go
go-agent/preempt/: README.md  constants.go  controller.go  controller_test.go  interfaces.go  poll.go  poll_test.go  reclaim.go  reclaim_test.go
go-agent/protocol/: conformance_test.go  types_gen.go
go-agent/runtime/: eventsink.go  identity.go  log.go  loops.go  runtime.go  runtime_test.go  seams.go
go-agent/state/: README.md  identity.go  identity_test.go
go-agent/supervisor/: README.md  child.go  command.go  command_test.go  config.go  health.go  helpers_test.go  supervisor.go  supervisor_test.go  suspend_unix.go  suspend_windows.go
schemas/: AgentConfig.json  AgentEvent.json  AgentSnapshot.json  DeviceCaps.json  GpuInfo.json  GpuStatus.json  Heartbeat.json  HeartbeatResponse.json  JobStatus.json  JobSubmit.json  ModelManifest.json  ModelRequirements.json  RegisterRequest.json  RegisterResponse.json  ReplicaEndpoint.json  ReplicaStatus.json  UnitTransition.json  WorkMetrics.json  WorkResult.json  WorkUnitLease.json  WorkUnitSpec.json  generate_go.py
schemas/fixtures/: agent_event.json  heartbeat.json  heartbeat_response.json  model_manifest.json  register_request.json  work_result.json  work_unit_lease.json
testbench/: README.md  app.py
testbench/static/: index.html
tests/: test_e14_fleet_scaffold.py
tests/acceptance/: acceptance_helpers.py  acceptance_matrix.py  acceptance_runner.py  test_acceptance_install.py  test_acceptance_log_hygiene.py  test_acceptance_matrix.py  test_acceptance_uninstall.py
tests/deploy/: test_offline_bundle.py
tests/integration/: conftest.py  goagent.py  integration_helpers.py  live_coordinator.py  stub_server.py  test_e13_coordinator_templates.py  test_e13_public_smoke.py  test_e13_smoke_acceptance.py  test_goagent_parity.py  test_integration_auth.py  test_integration_batch.py  test_integration_churn.py  test_integration_gateway.py  test_integration_lifecycle.py  test_integration_preemption.py
